web/themes/custom/union_marketing/scss/components/_sections.scss
.cu-section {
  clear: both;
  // Margins between sections are set on the bottom, and can therefore be removed
  // from the top. This is really only an issue for the first section on the
  // page, and we could therefore target the section:first-of-type if preferred.
  margin-top: 0;
}

.field--field-sections .cu-section-heading__link,
.paragraphs-previewer-html .cu-section-heading__link {
  order: 3;
}

.paragraph--type--image,
.paragraph--type--rich-text figure.cu-media,
.paragraph--type--video {
  margin: var(--cu-component-margin-bottom, var(--cu-vr2)) 0;

  @include breakpoint(md) {
    margin: var(--cu-component-margin-bottom, var(--cu-vr3)) 0;
  }
}

.cu-section--wide .paragraph--type--rich-text {
  max-width: var(--cu-max-width-section, 1060px);
  margin: 0 auto;
}

